# rapier

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demos/: CMakeLists.txt  hello_world.cpp
include/rp/: color.hpp  core.hpp  log.hpp  rapier.hpp
src/: CMakeLists.txt  core.cpp  core.hpp  log.cpp  log.hpp  log_internal.hpp  pch.hpp  rapier.hpp  version.cpp  version.hpp
src/core/: app.hpp  core.cpp  core.hpp  event.cpp  event.hpp  keyboard.hpp  window.cpp  window.hpp
src/gfx/: gfx.cpp  gfx.hpp
src/graphics/: framesync.cpp  framesync.hpp  gfx.cpp  gfx.hpp  shaders.cpp  shaders.hpp  swapchain.cpp  swapchain.hpp  validation.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_queue.cpp  vulkan_queue.hpp  vulkan_validation.hpp
src/input/: keyboard.cpp  keyboard.hpp  mapper.cpp  mapper.hpp  mouse.hpp
src/log/: log.cpp  log.hpp  log_internal.hpp
src/platform/: win32_keyboard.cpp  win32_keyboard.hpp  win32_window.cpp  win32_window.hpp
src/util/: file_io.cpp  file_io.hpp  util.hpp  util_types.hpp  uuid.cpp  uuid.hpp  version.cpp  version.hpp
